# bart-playground

./: .gitignore  LICENSE  README.md  environment.yml  experimental_parameters.md  params.py  plot.py  pyproject.toml  pytest.ini  requirements.txt  runtime_results.csv  setup.py  submit_init_high_lei_candes_100.sh  submit_init_linear_additive_10.sh  submit_init_low_lei_candes_10.sh  submit_init_piecewise_linear_20.sh  submit_init_smooth_additive_10.sh  submit_schedule_high_lei_candes_100.sh  submit_schedule_linear_additive_10.sh  submit_schedule_low_lei_candes_10.sh  submit_schedule_piecewise_linear_20.sh  submit_schedule_smooth_additive_10.sh  submit_temp_high_lei_candes_100.sh  submit_temp_linear_additive_10.sh  submit_temp_low_lei_candes_10.sh  submit_temp_piecewise_linear_20.sh  submit_temp_smooth_additive_10.sh  test_runtime.py  test_runtime_extended.py
.github/workflows/: ci.yml
bart_playground/: DataGenerator.py  __init__.py  bart.py  bart_generator.py  diagnostics.py  generators.py  mcbart.py  moves.py  params.py  priors.py  random_init.py  samplers.py  serializer.py  util.py  visualization.py  xgb_init.py
bart_playground/bandit/: TEagents.py  agent.py  bart_agent.py  basic_agents.py  basic_bart.py  bcf_agent.py  ensemble_agent.py  exp_util.py  me_agents.py  neural_paper_agents.py  neural_ts_agent.py  ope.py  refresh_agent.py  sim_util.py
bart_playground/bcf/: bcf.py  bcf_dataset.py  bcf_params.py  bcf_prior.py  bcf_sampler.py  bcf_util.py  bcf_view.py
benchmarks/: 01_debug.ipynb  README.md  real1_Abalone.ipynb  real2_WineQuality.ipynb  real3_CaliHousing.ipynb  real4_Concrete.ipynb  syn1_wu.ipynb
benchmarks/mtmh/: combined_results.ipynb  comparison.py  multi_tries.py  real1_Abalone.ipynb  real2_WineQuality.ipynb  real3_CalHousing.ipynb  real3_CaliHousing.ipynb  real3_CaliHousing_2.ipynb  real4_Concrete.ipynb  real5_BreastTumor.ipynb  real6_echoMonths.ipynb  real7_Satellite.ipynb  real8_Triazines.ipynb  test_Abalone.ipynb
benchmarks/mtmh_10tree/: combined_results.ipynb  multi_tries.py  real1_Abalone.ipynb  real2_WineQuality.ipynb  real3_CalHousing.ipynb  real5_BreastTumor.ipynb  real6_echoMonths.ipynb  real7_Satellite.ipynb  real8_Triazines.ipynb
benchmarks/mtmh_5tree/: combined_results.ipynb  comparison.py  real1_Abalone.ipynb  real2_WineQuality.ipynb  real3_CalHousing.ipynb  real4_Concrete.ipynb  real5_BreastTumor.ipynb  real6_echoMonths.ipynb  real7_Satellite.ipynb  real8_Triazines.ipynb
benchmarks/mtmh_burnin/: comparison.py  multi_tries.py  real1_Abalone.ipynb  real2_WineQuality.ipynb  real3_CalHousing.ipynb  real4_Concrete.ipynb  real6_echoMonths.ipynb  real7_Satellite.ipynb
betterbart/: node.py
diagnosis/: diagnosis.py  experiment.py  experiment_init.py  experiment_init_pipe.py  experiment_pipe.py  real1_Abalone.ipynb  real1_Abalone_3tree.ipynb  real1_Abalone_50.ipynb  real1_Abalone_cp.ipynb  real1_Abalone_debug.ipynb  real1_Abalone_debug2.ipynb  real1_Abalone_depth.ipynb  real1_Abalone_init copy.ipynb  real1_Abalone_init.ipynb  real1_Abalone_init_cp.ipynb  real1_Abalone_init_pipeline.ipynb  real2_WineQuality.ipynb  real3_CalHousing copy.ipynb  real3_CalHousing.ipynb  real3_CalHousing_3tree.ipynb  real3_CalHousing_depth.ipynb  real3_CalHousing_init copy.ipynb  real3_CalHousing_init.ipynb  real3_CalHousing_init_cp.ipynb  real3_CalHousing_init_log.ipynb  real3_CalHousing_init_noisy.ipynb  real3_CalHousing_init_pipeline.ipynb  real4_Concrete.ipynb  real6_echoMonths.ipynb  real7_Satellite.ipynb
experiments/: __init__.py  analyze_credible_chains.py  calculate_variances.py  data_variances.yaml  gr_quantile_results_all.csv  init_exp.py  initialization.py  initialization_experiment.py  master_results_cache.csv  plot_aggregated_results.py  plot_snr_hypothesis_results.py  plotting_consolidated.py  relative_rmse.py  schedule.py  temperature.py
legacy/: requirements.txt
models/: tree_model.pkl
notebooks/: 01_debug copy 2.ipynb  01_debug copy.ipynb  01_debug copy_newsamp.ipynb  01_debug.ipynb  01_debug_augdata.ipynb  01_debug_bcf.ipynb  01_debug_bcf_mu.ipynb  01_debug_bcf_tau.ipynb  01_debug_incdata.ipynb  01_debug_mc.ipynb  01_debug_profile.ipynb  01_debug_profile_2.ipynb  01_debug_trace.ipynb  CalHousing_profile.ipynb  DefaultBART_grid.ipynb  break_combine.ipynb  comparison_syn1 copy.ipynb  comparison_syn1.ipynb  four_moves.ipynb  mushroom.py  mushroom_models.ipynb  real1_Abalone copy.ipynb  special_moves.ipynb  special_moves_leaf.ipynb  test_Abalone.ipynb  test_Abalone_trace.ipynb  test_CalHousing copy.ipynb  test_CalHousing.ipynb  test_CalHousing_pipeline.ipynb  test_CalHousing_trace copy.ipynb  test_CalHousing_trace.ipynb  test_MCMC copy.ipynb  test_MCMC.ipynb  test_MCMC_4.ipynb  test_MCMC_BD.ipynb  test_MCMC_BD_wodata.ipynb  test_MCMC_Bernoulli.ipynb  test_MCMC_COM.ipynb  test_MCMC_COM_abalone.ipynb  test_MCMC_GPD copy.ipynb  (+26 more)
src/: bart.py  bcf.py  bcf_params.py  bcf_prior.py  bcf_sampler.py  bcf_util.py  moves.py  params.py  posterior.py  priors.py  requirements.txt  sampler.py  samplers.py  test.ipynb  test_moves.ipynb  util.py  visualization.py
test/: 01_debug.ipynb  break_combine.ipynb  check.csv  four_moves.ipynb  test.ipynb  test_BART.py  test_Break.ipynb  test_MCMC.ipynb  test_Tree_data_idx.py  test_bart_serializer.py  test_bcf.py  test_bcf_multi.ipynb  test_comparison.py  test_defaultBART.py  test_defaultPreprocessor.py  test_dirichlet.ipynb  test_generator.py  test_initialization.py  test_linear_ts_equivalence.py  test_logistic_bart_update_fit.ipynb  test_marginal_update.py  test_mcbart.ipynb  test_mcbart.py  test_moves.ipynb  test_moves.py  test_multi.ipynb  test_no_offest.py  test_params.py  test_prior.py  test_priors_data_idx.py  test_sampler.py  test_sampler_after_init.py  test_serializer.py  test_speed.py  test_tree.py  test_treeparams.py  test_visualization.py  test_xgb_complex.py
tests/: 01_debug.ipynb  01_debug_augdata.ipynb  LogBART_grid.ipynb  conftest.py  test_BART.py  test_agent_serializer.py  test_bcf_incremental.ipynb  test_binary.ipynb  test_feature_importance.py  test_generator.py  test_mixing.py  test_mushroom.ipynb
(+1115 files in other folders)
